# rune-arena

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  prompt.md  prompt2.md  todo.txt
assets/: 128x128_tree_modular.json  _sprite_sheet_temp.aseprite  aseprite_export_layers.lua  assets.piskel  assets_32x64.piskel  build_modular.sh  canopy_background.json  canopy_foreground.json  castle_level_requirements.json  composite_effects.json  destructibles.json  dg-tiles-ids.txt  dg-tiles.piskel  equipment_profiles.json  hit_shapes.json  loot_tables.json  objects.json  script.gh  shadow.json  spell_patterns.json  sprite_sheet.aseprite  sprite_sheet.json  sprite_sheet_128x128.aseprite  sprite_sheet_128x128.json  sprite_sheet_128x128_aseprite.json  sprite_sheet_32x64.aseprite  sprite_sheet_32x64.json  sprite_sheet_96x96.aseprite  sprite_sheet_96x96.json  sprite_sheet_aseprite.json  tiles-simple.3dm  tiles-simple.3dm.rhl  tiles-simple.dxf  tiles.3dm  tiles.3dm.rhl  trunk.json  wizard_temp.json
assets/128x128_modular/: wizzard_128x128.aseprite
assets/128x128_tree_modular/: 128x128_tree_modular.aseprite  metadata.json
assets/3d/: hammer-wip-mb.aseprite  hammer-wip.aseprite  wizzard.blend  wizzard.blend1
assets/64x64_modular/: wizzard_64x64.aseprite
assets/_archive/: Pillars-and-random-shi.piskel  _proposed_objects_schema.json  assets.piskel  assets_before_doublegrid.piskel  melee_attack.piskel  script.gh  sprite_sheet(mage-with-nose).aseprite  sprite_sheet-2026-06-23(no-texture-grass).aseprite  sprite_sheet-2026-06-23.aseprite  tiles.3dm  (+4 more)
src/: main.cpp
(+136 files in other folders)
